[gd_scene load_steps=4 format=2]

[ext_resource path="res://Script/RPCClient.gd" type="Script" id=1]
[ext_resource path="res://Script/World.gd" type="Script" id=2]
[ext_resource path="res://Scenes/VoiceChat.tscn" type="PackedScene" id=3]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="RPCClient" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 218.0
margin_top = 8.0
margin_right = 811.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomsChatButton" type="Button" parent="."]
margin_left = 114.0
margin_top = 113.0
margin_right = 260.0
margin_bottom = 171.0
text = "RoomsChat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrivateChatButton" type="Button" parent="."]
margin_left = 551.0
margin_top = 109.0
margin_right = 697.0
margin_bottom = 167.0
text = "PrivateChat"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VoiceChat" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="RoomsChatButton" to="." method="_on_RoomsChatButton_pressed"]
[connection signal="pressed" from="PrivateChatButton" to="." method="_on_PrivateChatButton_pressed"]
